--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "gulp",
-    "build": "gulp build"
+    "build": "gulp build",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/OleksiiDvornik/rhythm-guitar-shop/issues"
   },
-  "homepage": "https://github.com/OleksiiDvornik/rhythm-guitar-shop#readme",
+  "homepage": "https://OleksiiDvornik.github.io/rhythm-guitar-shop",
   "devDependencies": {
     "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
@@ -26,6 +27,7 @@
     "babel-loader": "^9.1.2",
     "browser-sync": "^2.28.3",
     "del": "^7.0.0",
+    "gh-pages": "^5.0.0",
     "gulp": "^4.0.2",
     "gulp-changed": "^4.0.3",
     "gulp-clean-css": "^4.3.0",
